fixing leaflet z-index issues

--- a/src/components/HamburgerMenu/Hamburger/hamburger.module.css
+++ b/src/components/HamburgerMenu/Hamburger/hamburger.module.css
@@ -12,7 +12,7 @@
     border: none;
     cursor: pointer;
     padding: 0;
-    z-index: 10;
+    z-index: 13;
 }
 
 .hamburger-container:focus {
